--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,171 @@ body {
 }
 
 .header {
-    background-image: url(KuvatTD/tausta1.jpg);
+    background-image: url(KuvatTD/tausta2.jpg);
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     padding: 30px 80px;
     text-align: center;
+    max-width: 1250px;
   }
 
 .MyUL {
 	padding: 30px 80px;
   }
 
+  ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    font-size: 16px;
+    max-width: 1210px;
+    transition: 0.2s;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  }
+
 ul li:nth-child(odd) {
   background: #edf8f8;
   }
+
+/* Muutetaan värejä, kun hiiri siirtyy päälle */
+ul li:hover {
+  background: royalblue;
+  color: white;
+  transition: all 0.5s ease;
+}
+
+ul li.checked {
+  color: #8c8c8c;
+  text-decoration: line-through;
+}
+
+ul li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #00cc00;
+  color: white;
+}
+
+input {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 80%;
+  padding: 10px;
+  float: right;
+  font-size: 16px;
+}
+
+/* Muutetaan lisäysnappi tyylikkääksi */
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+ }
+ 
+ button.learn-more {
+  width: 12rem;
+  height: auto;
+ }
+ 
+ button.learn-more .circle {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #282936;
+  border-radius: 1.625rem;
+ }
+ 
+ button.learn-more .circle .icon {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+ }
+ 
+ button.learn-more .circle .icon.arrow {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none;
+ }
+ 
+ button.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: "";
+  top: -0.29rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #fff;
+  border-right: 0.125rem solid #fff;
+  transform: rotate(45deg);
+ }
+ 
+ button.learn-more .button-text {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0.75rem 0;
+  margin: 0 0 0 1.85rem;
+  color: #282936;
+  font-weight: 700;
+  line-height: 1.6;
+  text-align: center;
+  text-transform: uppercase;
+ }
+ 
+ button:hover .circle {
+  width: 100%;
+ }
+ 
+ button:hover .circle .icon.arrow {
+  background: #fff;
+  transform: translate(1rem, 0);
+ }
+ 
+ button:hover .button-text {
+  color: #fff;
+ }
 
   .sidebar{
     position: fixed;
@@ -30,7 +181,6 @@ ul li:nth-child(odd) {
     background: #11101D;
     padding: 6px 14px;
     z-index: 99;
-    transition: all 0.5s ease;
   }
 
   .sidebar .logo-details{
@@ -65,9 +215,7 @@ ul li:nth-child(odd) {
     cursor: pointer;
     transition: all 0.5s ease;
   }
-  .sidebar.open .logo-details #btn{
-    text-align: right;
-  }
+  
   .sidebar i{
     color: #fff;
     height: 60px;
