--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,14 @@ input {
   font-size: 16px;
 }
 
+footer {
+	background: #11101D;
+	color: #dcdcdc;
+	margin: 10px;
+  max-width: 1220px;
+	text-align: center;
+}
+
 /* Muutetaan lisäysnappi tyylikkääksi */
 button {
   position: relative;
